// Vitest Snapshot v1

exports[`RenderAPI snapshots > commit-only synthetic entries (sourceCommit + no author url) 1`] = `
"# 🚀 v4.1.0 &nbsp; • &nbsp; April 05, 2026

![BUMP](https://img.shields.io/badge/BUMP-PATCH-green?style=flat-square) ![CHANGES](https://img.shields.io/badge/CHANGES-1-blue?style=flat-square) ![PACKAGES](https://img.shields.io/badge/PACKAGES-0-orange?style=flat-square)

---

* **commit abcdef1** — Standalone commit  
&nbsp; &nbsp; 📦 **Scope:** general  
&nbsp; &nbsp; ✍️ **By:** @ci-bot"
`;

exports[`RenderAPI snapshots > custom item template skips default visual summary 1`] = `
"# 🚀 v4.0.8 &nbsp; • &nbsp; April 05, 2026

### 📚 DOCUMENTATION
- Add style guide
<br>"
`;

exports[`RenderAPI snapshots > custom section/item templates 1`] = `
"# 🚀 v4.0.0 &nbsp; • &nbsp; April 05, 2026

### Features
- [#40](https://github.com/acme/demo/issues/40) | Template driven entry | [@author](https://example.com/author) | [core](https://npmjs.com/package/@acme/core)"
`;

exports[`RenderAPI snapshots > default header + scope grouping 1`] = `
"# 🚀 v2.0.0 &nbsp; • &nbsp; April 05, 2026

![BUMP](https://img.shields.io/badge/BUMP-MINOR-yellow?style=flat-square) ![CHANGES](https://img.shields.io/badge/CHANGES-2-blue?style=flat-square) ![PACKAGES](https://img.shields.io/badge/PACKAGES-2-orange?style=flat-square)

---

### ✨ FEATURES
* **#10** — Ship onboarding  
&nbsp; &nbsp; 📦 **Scope:** \`core\` • \`web\`  
&nbsp; &nbsp; ✍️ **By:** [@author](https://example.com/author)
<br>

### 🐛 FIXES
* **#11** — Fix race condition  
&nbsp; &nbsp; 📦 **Scope:** \`core\`  
&nbsp; &nbsp; ✍️ **By:** [@author](https://example.com/author)
<br>"
`;

exports[`RenderAPI snapshots > default layout renders top-level visual summary 1`] = `
"# 🚀 v4.0.7 &nbsp; • &nbsp; April 05, 2026

![BUMP](https://img.shields.io/badge/BUMP-MINOR-yellow?style=flat-square) ![CHANGES](https://img.shields.io/badge/CHANGES-3-blue?style=flat-square) ![PACKAGES](https://img.shields.io/badge/PACKAGES-3-orange?style=flat-square)

---

### ✨ FEATURES
* **#57** — Ship composer  
&nbsp; &nbsp; 📦 **Scope:** \`core\`  
&nbsp; &nbsp; ✍️ **By:** [@author](https://example.com/author)
* **#58** — Ship presets  
&nbsp; &nbsp; 📦 **Scope:** \`web\`  
&nbsp; &nbsp; ✍️ **By:** [@author](https://example.com/author)
<br>

### 🐛 FIXES
* **#59** — Fix lint script  
&nbsp; &nbsp; 📦 **Scope:** \`cli\`  
&nbsp; &nbsp; ✍️ **By:** [@author](https://example.com/author)
<br>"
`;

exports[`RenderAPI snapshots > empty change list renders a friendly empty-state note 1`] = `
"# 🚀 v4.0.5 &nbsp; • &nbsp; April 05, 2026

_No user-facing changes since the last tag._"
`;

exports[`RenderAPI snapshots > grouping none renders a flat list without sections 1`] = `
"# 🚀 v4.0.1 &nbsp; • &nbsp; April 05, 2026

![BUMP](https://img.shields.io/badge/BUMP-MINOR-yellow?style=flat-square) ![CHANGES](https://img.shields.io/badge/CHANGES-2-blue?style=flat-square) ![PACKAGES](https://img.shields.io/badge/PACKAGES-2-orange?style=flat-square)

---

* **#50** — Add keyboard shortcuts  
&nbsp; &nbsp; 📦 **Scope:** \`web\`  
&nbsp; &nbsp; ✍️ **By:** [@author](https://example.com/author)
* **#51** — Handle null session  
&nbsp; &nbsp; 📦 **Scope:** \`core\`  
&nbsp; &nbsp; ✍️ **By:** [@author](https://example.com/author)"
`;

exports[`RenderAPI snapshots > item template can consume DETAILS and STATS placeholders 1`] = `
"# 🚀 v4.0.4 &nbsp; • &nbsp; April 05, 2026

### 📚 DOCUMENTATION
* Add migration guide
  source=[#55](https://github.com/acme/demo/issues/55)
  stats=  - 📦 Packages (2): [cli](https://npmjs.com/package/@acme/cli), [core](https://npmjs.com/package/@acme/core)
  - 🧑‍💻 [@author](https://example.com/author)
  details=
<br>"
`;

exports[`RenderAPI snapshots > large mixed release snapshot 1`] = `
"# 🚀 v3.4.0 &nbsp; • &nbsp; April 05, 2026

![BUMP](https://img.shields.io/badge/BUMP-MAJOR-red?style=flat-square) ![CHANGES](https://img.shields.io/badge/CHANGES-7-blue?style=flat-square) ![PACKAGES](https://img.shields.io/badge/PACKAGES-3-orange?style=flat-square)

---

### 💥 BREAKING
##### 📦 [core](https://npmjs.com/package/@acme/core)
* **#20** — Drop legacy auth  
&nbsp; &nbsp; 📦 **Scope:** \`core\`  
&nbsp; &nbsp; ✍️ **By:** [@author](https://example.com/author)
<br>

### ✨ FEATURES
##### 📦 [core](https://npmjs.com/package/@acme/core)
* **#21** — Add cache layer  
&nbsp; &nbsp; 📦 **Scope:** \`core\`  
&nbsp; &nbsp; ✍️ **By:** [@author](https://example.com/author)
##### 📦 [web](https://npmjs.com/package/@acme/web)
* **#22** — Add dashboard  
&nbsp; &nbsp; 📦 **Scope:** \`web\`  
&nbsp; &nbsp; ✍️ **By:** [@author](https://example.com/author)
<br>

### 🐛 FIXES
##### 📦 [web](https://npmjs.com/package/@acme/web)
* **#23** — Fix pagination  
&nbsp; &nbsp; 📦 **Scope:** \`web\`  
&nbsp; &nbsp; ✍️ **By:** [@author](https://example.com/author)
##### 📦 General
* **#24** — Fix typo  
&nbsp; &nbsp; 📦 **Scope:** general  
&nbsp; &nbsp; ✍️ **By:** [@author](https://example.com/author)
<br>

### 🧹 CHORES
##### 📦 [cli](https://npmjs.com/package/@acme/cli)
* **#25** — Bump deps  
&nbsp; &nbsp; 📦 **Scope:** \`cli\`  
&nbsp; &nbsp; ✍️ **By:** [@author](https://example.com/author)
##### 📦 General
* **#26** — Refactor scripts  
&nbsp; &nbsp; 📦 **Scope:** general  
&nbsp; &nbsp; ✍️ **By:** [@author](https://example.com/author)
<br>"
`;

exports[`RenderAPI snapshots > package grouping normalizes multi-package keys 1`] = `
"# 🚀 v3.4.1 &nbsp; • &nbsp; April 05, 2026

![BUMP](https://img.shields.io/badge/BUMP-MINOR-yellow?style=flat-square) ![CHANGES](https://img.shields.io/badge/CHANGES-2-blue?style=flat-square) ![PACKAGES](https://img.shields.io/badge/PACKAGES-2-orange?style=flat-square)

---

### ✨ FEATURES
##### 📦 [core](https://npmjs.com/package/@acme/core) · [web](https://npmjs.com/package/@acme/web)
* **#30** — Ship shared auth layer  
&nbsp; &nbsp; 📦 **Scope:** \`core\` • \`web\`  
&nbsp; &nbsp; ✍️ **By:** [@author](https://example.com/author)
* **#31** — Expand auth docs  
&nbsp; &nbsp; 📦 **Scope:** \`core\` • \`web\`  
&nbsp; &nbsp; ✍️ **By:** [@author](https://example.com/author)
<br>"
`;

exports[`RenderAPI snapshots > package grouping renders normalized multi-package sections 1`] = `
"# 🚀 v4.0.2 &nbsp; • &nbsp; April 05, 2026

![BUMP](https://img.shields.io/badge/BUMP-PATCH-green?style=flat-square) ![CHANGES](https://img.shields.io/badge/CHANGES-2-blue?style=flat-square) ![PACKAGES](https://img.shields.io/badge/PACKAGES-2-orange?style=flat-square)

---

### 🐛 FIXES
##### 📦 [core](https://npmjs.com/package/@acme/core) · [web](https://npmjs.com/package/@acme/web)
* **#52** — Align package order  
&nbsp; &nbsp; 📦 **Scope:** \`core\` • \`web\`  
&nbsp; &nbsp; ✍️ **By:** [@author](https://example.com/author)
* **#53** — Keep grouping stable  
&nbsp; &nbsp; 📦 **Scope:** \`core\` • \`web\`  
&nbsp; &nbsp; ✍️ **By:** [@author](https://example.com/author)
<br>"
`;

exports[`RenderAPI snapshots > section icons come from user config changeTypeEmojis 1`] = `
"# 🚀 v4.0.9 &nbsp; • &nbsp; April 05, 2026

![BUMP](https://img.shields.io/badge/BUMP-MINOR-yellow?style=flat-square) ![CHANGES](https://img.shields.io/badge/CHANGES-2-blue?style=flat-square) ![PACKAGES](https://img.shields.io/badge/PACKAGES-2-orange?style=flat-square)

---

### 🚀 FEATURES
* **#61** — Ship inline editor  
&nbsp; &nbsp; 📦 **Scope:** \`web\`  
&nbsp; &nbsp; ✍️ **By:** [@author](https://example.com/author)
<br>

### 🛠️ FIXES
* **#62** — Handle stale cache  
&nbsp; &nbsp; 📦 **Scope:** \`core\`  
&nbsp; &nbsp; ✍️ **By:** [@author](https://example.com/author)
<br>"
`;

exports[`RenderAPI snapshots > section templates are ignored when grouping is none 1`] = `
"# 🚀 v4.0.6 &nbsp; • &nbsp; April 05, 2026

* **#56** — Increase coverage for renderer  
&nbsp; &nbsp; 📦 **Scope:** \`core\`  
&nbsp; &nbsp; ✍️ **By:** [@author](https://example.com/author)"
`;

exports[`RenderAPI snapshots > template + package grouping + multiline body 1`] = `
"## Release v1.2.3 on 2026-04-05

![BUMP](https://img.shields.io/badge/BUMP-MINOR-yellow?style=flat-square) ![CHANGES](https://img.shields.io/badge/CHANGES-3-blue?style=flat-square) ![PACKAGES](https://img.shields.io/badge/PACKAGES-2-orange?style=flat-square)

---

### ✨ FEATURES
##### 📦 [core](https://npmjs.com/package/@acme/core)
* **#1** — Add dark mode  
&nbsp; &nbsp; 📦 **Scope:** \`core\`  
&nbsp; &nbsp; ✍️ **By:** [@alice](https://example.com/alice)
<br>

### 🐛 FIXES
##### 📦 [cli](https://npmjs.com/package/@acme/cli)
* **#2** — Fix login  
&nbsp; &nbsp; 📦 **Scope:** \`cli\`  
&nbsp; &nbsp; ✍️ **By:** [@bob](https://example.com/bob)
<br>

### 🧹 CHORES
##### 📦 General
* **#3** — Minor cleanup  
&nbsp; &nbsp; 📦 **Scope:** general  
&nbsp; &nbsp; ✍️ **By:** [@chris](https://example.com/chris)
<br>"
`;

exports[`RenderAPI snapshots > unknown package labels fall back to raw names with links when available 1`] = `
"# 🚀 v4.0.3 &nbsp; • &nbsp; April 05, 2026

![BUMP](https://img.shields.io/badge/BUMP-MINOR-yellow?style=flat-square) ![CHANGES](https://img.shields.io/badge/CHANGES-1-blue?style=flat-square) ![PACKAGES](https://img.shields.io/badge/PACKAGES-1-orange?style=flat-square)

---

### ✨ FEATURES
* **#54** — Wire analytics hook  
&nbsp; &nbsp; 📦 **Scope:** \`sdk\`  
&nbsp; &nbsp; ✍️ **By:** [@author](https://example.com/author)
<br>"
`;
